// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainDetails should render 1`] = `
.emotion-0 {
  margin: 20px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-4 {
  padding-right: 50px;
}

.emotion-6 {
  font-weight: 600;
}

.emotion-8 {
  color: #9a9a9a;
  font-size: 12px;
  text-transform: uppercase;
}

.emotion-26 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 18px;
  outline: 0;
  position: relative;
}

.emotion-26>input[type='checkbox'] {
  box-sizing: border-box;
  cursor: pointer;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-26>input[type='checkbox']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 18px;
  line-height: 18px;
  white-space: nowrap;
}

.emotion-26>input[type='checkbox']+label .label-content {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 6px;
}

@-moz-document url-prefix() {
  .emotion-26>input[type='checkbox']+label .label-content {
    margin-top: 1px;
  }
}

.emotion-26>input[type='checkbox']+label:before {
  background: #d5d5d5;
  border-radius: 9px;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 4px;
  line-height: 16px;
  margin: 7px 0 0 0;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  vertical-align: top;
  width: 34px;
}

.emotion-26>input[type='checkbox']+label::after {
  background-color: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: ' ';
  cursor: pointer;
  display: block;
  height: 18px;
  left: 0;
  position: absolute;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  top: 0;
  width: 18px;
}

.emotion-26>input[type='checkbox']:checked+label::before {
  background-color: rgba(21,192,70,0.45);
}

.emotion-26>input[type='checkbox']:checked+label::after {
  background-color: #15c046;
  border-color: #15c046;
  left: 16px;
}

.emotion-26>input[type='checkbox']:disabled+label {
  color: #9a9a9a;
  cursor: not-allowed;
}

.emotion-26>input[type='checkbox']:disabled+label::before {
  background-color: #e8e8e8;
  cursor: not-allowed;
}

.emotion-26>input[type='checkbox']:disabled+label::after {
  border-color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-26>input[type='checkbox']:checked:disabled+label::after {
  background: #d5d5d5;
}

.emotion-37 {
  font-weight: 600;
  title: add;
  word-break: break-all;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 400px;
}

.emotion-39 {
  color: #3570f4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-weight: '';
}

<div
  class="emotion-0 emotion-1"
  data-testid="domain-details"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        N/A
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Product ID
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        N/A
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        ORGANIZATION
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-26 denali-switch"
          data-testid="switch-wrapper"
        >
          <input
            disabled=""
            id="switch-auditDomainDetails"
            name="auditDomainDetails"
            type="checkbox"
            value=""
          />
          <label
            for="switch-auditDomainDetails"
          />
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        AUDIT ENABLED
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        N/A
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        AWS ACCOUNT ID
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-37 emotion-38"
        title="add"
      >
        <a
          class="emotion-39 emotion-40"
        >
          add
        </a>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        BUSINESS SERVICE
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainDetails should render with mock data 1`] = `
.emotion-0 {
  margin: 20px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-4 {
  padding-right: 50px;
}

.emotion-6 {
  font-weight: 600;
}

.emotion-8 {
  color: #9a9a9a;
  font-size: 12px;
  text-transform: uppercase;
}

.emotion-14 {
  color: #3570f4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 18px;
  outline: 0;
  position: relative;
}

.emotion-28>input[type='checkbox'] {
  box-sizing: border-box;
  cursor: pointer;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-28>input[type='checkbox']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 18px;
  line-height: 18px;
  white-space: nowrap;
}

.emotion-28>input[type='checkbox']+label .label-content {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 6px;
}

@-moz-document url-prefix() {
  .emotion-28>input[type='checkbox']+label .label-content {
    margin-top: 1px;
  }
}

.emotion-28>input[type='checkbox']+label:before {
  background: #d5d5d5;
  border-radius: 9px;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 4px;
  line-height: 16px;
  margin: 7px 0 0 0;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  vertical-align: top;
  width: 34px;
}

.emotion-28>input[type='checkbox']+label::after {
  background-color: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: ' ';
  cursor: pointer;
  display: block;
  height: 18px;
  left: 0;
  position: absolute;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  top: 0;
  width: 18px;
}

.emotion-28>input[type='checkbox']:checked+label::before {
  background-color: rgba(21,192,70,0.45);
}

.emotion-28>input[type='checkbox']:checked+label::after {
  background-color: #15c046;
  border-color: #15c046;
  left: 16px;
}

.emotion-28>input[type='checkbox']:disabled+label {
  color: #9a9a9a;
  cursor: not-allowed;
}

.emotion-28>input[type='checkbox']:disabled+label::before {
  background-color: #e8e8e8;
  cursor: not-allowed;
}

.emotion-28>input[type='checkbox']:disabled+label::after {
  border-color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-28>input[type='checkbox']:checked:disabled+label::after {
  background: #d5d5d5;
}

.emotion-39 {
  font-weight: 600;
  title: add;
  word-break: break-all;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 400px;
}

.emotion-41 {
  color: #3570f4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-weight: '';
}

.emotion-47 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px transparent inset,0 0 0 0 #d5d5d5 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  box-shadow: 0 0 0 1px #3697f2 inset;
  color: #3697f2;
}

.emotion-47:first-of-type {
  margin-left: 0;
}

.emotion-47:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-47:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-47:hover:not(:disabled) {
  background: #d7e2fd;
}

<div
  class="emotion-0 emotion-1"
  data-testid="domain-details"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-14 emotion-15"
          data-testid="pm-id"
        >
          test
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Product ID
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        test
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        ORGANIZATION
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-28 denali-switch"
          data-testid="switch-wrapper"
        >
          <input
            checked=""
            disabled=""
            id="switch-auditDomainDetails"
            name="auditDomainDetails"
            type="checkbox"
            value="true"
          />
          <label
            for="switch-auditDomainDetails"
          />
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        AUDIT ENABLED
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        test
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        AWS ACCOUNT ID
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-39 emotion-40"
        title="add"
      >
        <a
          class="emotion-41 emotion-42"
        >
          add
        </a>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        BUSINESS SERVICE
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <button
        class="emotion-47 denali-button"
      >
        Onboard to AWS
      </button>
    </div>
  </div>
</div>
`;
